package projeto.src.main.java.enums;

public enum comando {
    Do,
    Re,
    Mi,
    Fa,
    Sol,
    La,
    Si;
}
