package leitor;

public class LeitorDeArquivo {


}
